--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "~3.5.2",
-    "gulp-util": "~2.2.14",
-    "gulp-concat": "~2.1.7",
     "gulp-autoprefixer": "~0.0.6",
+    "gulp-concat": "~2.1.7",
+    "gulp-imagemin": "^0.1.5",
     "gulp-minify-css": "~0.3.0",
-    "gulp-uglify": "~0.2.1"
+    "gulp-svgmin": "^0.4.4",
+    "gulp-uglify": "~0.2.1",
+    "gulp-util": "~2.2.14"
   },
   "license": "All Rights Reserved"
 }
