--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.5.2",
+    "gulp": "~3.6.0",
     "gulp-autoprefixer": "~0.0.6",
     "gulp-concat": "~2.1.7",
-    "gulp-imagemin": "^0.1.5",
+    "gulp-imagemin": "~0.1.5",
     "gulp-minify-css": "~0.3.0",
-    "gulp-svgmin": "^0.4.4",
+    "gulp-svgo": "^0.1.1",
     "gulp-uglify": "~0.2.1",
     "gulp-util": "~2.2.14"
   },
