--- a/package.json
+++ b/package.json
@@ -1,17 +1,41 @@
 {
   "name": "your-project",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "postinstall": "if [ \"$NODE_ENV\" = development ]; then bower install; fi"
+  },
+  "browser": {
+    "picturefill": "./bower_components/picturefill/dist/picturefill.min.js",
+    "jquery": "./bower_components/jquery/dist/jquery.min.js"
+  },
+  "browserify-shim": {
+    "jquery": "jQuery",
+    "picturefill": "Picturefill"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
   "dependencies": {},
   "devDependencies": {
-    "gulp": "~3.6.0",
-    "gulp-autoprefixer": "~0.0.6",
-    "gulp-concat": "~2.1.7",
-    "gulp-imagemin": "~0.1.5",
-    "gulp-minify-css": "~0.3.0",
-    "gulp-svgo": "^0.1.1",
-    "gulp-uglify": "~0.2.1",
-    "gulp-util": "~2.2.14"
-  },
-  "license": "All Rights Reserved"
+    "babelify": "^6.1.3",
+    "browserify": "~10.2.6",
+    "browserify-shim": "^3.8.9",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-bump": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-help": "^1.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-streamify": "0.0.5",
+    "gulp-strip-debug": "^1.0.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "lodash": "^3.10.0",
+    "vinyl-source-stream": "^1.1.0"
+  }
 }
