--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "guzzlehttp/guzzle": "^6.1"
     },
     "autoload": {
-        "psr-4": {"TDM\\": "lib/class/"}
+        "psr-4": {"TDM\\": "escher"}
     }
 }
