Make a start on a test suite

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     },
     "autoload": {
         "psr-4": {"TDM\\": "lib"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
     }
 }
